# vart

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: ci.yml  fuzz.yml  release.yml
benches/: allocs.rs  art_bench.rs  art_compare_bench.rs  sparse_array_bench.rs  vart_bench.rs  vec_array_bench.rs
fuzz/: Cargo.toml
fuzz/src/: vart_check.rs  vart_check_test.rs
src/: art.rs  im_node.rs  iter.rs  lib.rs  node.rs  partial.rs  snapshot.rs  version.rs
src/node/: immutable.rs  mod.rs  mutable.rs
src/trie/: mod.rs
src/trie/immutable/: art.rs  mod.rs
src/trie/mutable/: art.rs
testdata/: words.txt
